tests/expectations/compiler/function/self_fail.out
<<<<<<< HEAD
DCE_ENABLED:
Error [ETYC0372040]: The allowed accesses to `self` are `self.{caller, checksum, edition, program_owner, signer}`.
    --> compiler-test:4:21
     |
   4 |         return self.foo == addr;
     |                     ^^^

DCE_DISABLED:
Error [ETYC0372040]: The allowed accesses to `self` are `self.{caller, checksum, edition, program_owner, signer}`.
=======
Error [ETYC0372040]: The allowed accesses to `self` are `self.caller` and `self.signer`.
>>>>>>> feat/cli-improvements
    --> compiler-test:4:21
     |
   4 |         return self.foo == addr;
     |                     ^^^
